Updates to slides and digressing with themes

--- a/src/slides.mdx
+++ b/src/slides.mdx
@@ -2,6 +2,9 @@
 
 ## Hvordan fungerer egentlig en kontrast
 
+Notes: Dette er noe jeg har lurt mye på
+ * snerk
+ * snerk
 ---
 
 # Kort om lille meg
@@ -13,40 +16,38 @@
 
 - Frontendutvikler på designutvikling i Norsk rikskringkasting (NRK)
 
+ - Core Components og kode på tvers
+
 Notes: Hvorfor prater jeg om dette?
 
 ---
 
-# Agenda
+# Agenda er kult
 
 - Kontekst
-  - Fugleperspektiv: Brukeropplevelse -> Tilgjengelighet/a11y -> UU -> WCAG
-  - Aktualitet
-  -
+  - Fugleperspektiv: Verdensveven -> Skjermer -> Brukeropplevelse -> Tilgjengelighet/a11y -> UU -> WCAG
+  - Ordbok? -Skrik ut!
+- Hvordan type kontrast snakker vi om her, sånn egentlig
+  - Fremmedordet
+  - Belysning
+  - Fototeknikk
+  - Universell utforming
 - Hva er en kontrast?
-- Hvordan fungerer en kontrast på
-  - Oss
+- Hvordan fungerer en kontrast på Oss (Øyet)
+  - [Shinobu Ishihara](https://en.wikipedia.org/wiki/Shinobu_Ishihara)
+  - Skjermer
   - 
+
+- Lære mer
+  - Whocanuse.com
+- Kilder og mersmak
+- Spørsmål
+---
+![ishiharatest](https://upload.wikimedia.org/wikipedia/commons/c/c7/Ishihara-12.gif)
+
 ---
 
 # Kilder
- - Store norske leksikon: [kontrast](https://snl.no/kontrast_-_belysning)
-
----
-
-## Yellow div from a JSX component
-
-<div style={{ height: '50px', width: '100%', backgroundColor: 'yellow' }} />
-
-Notes: here are some more notes.
-
----
-
-# Write your Spectacle Presentations in Markdown
-
-## And seamlessly use React Components
-
-**How sweet is that**
-**(super sweet)**
+ - Store norske leksikon: [Kontrast](https://snl.no/kontrast), [Kontrast (belysning)](https://snl.no/kontrast_-_belysning), [Kontrast (fototeknikk)](https://snl.no/kontrast_-_forskjell)
 
 ---
